# prost-serde-derive

./: Cargo.toml  LICENSE  README.md  crates-io.md
.github/workflows/: typos.yaml
derive/: Cargo.toml  rustfmt.toml
derive/src/: attr.rs  context.rs  deserialize.rs  lib.rs  serialize.rs  util.rs
derive/src/deserialize/: enum.rs  field.rs  struct.rs
derive/src/serialize/: enum.rs  field.rs  struct.rs
example/: .gitignore  Cargo.toml  build.rs
example/proto/: test.proto
example/src/: main.rs
tests/: Cargo.toml  build.rs
tests/proto/: empty.proto  enums.proto  message.proto  oneof.proto  optional.proto  options.proto  primitive.proto  repeated.proto
tests/src/: lib.rs  proto.rs  util.rs
tests/tests/: empty.rs  enums.rs  message.rs  oneof.rs  optional.rs  options.rs  primitive.rs  repeated.rs
