[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.20"
serde = "1.0"
serde_json = "1.0"
prost = "0.11"
prost-serde-derive = { path = "../derive" }

[build-dependencies]
prost-build = { git = "https://github.com/tokio-rs/prost" }
tonic-build = { git = "https://github.com/segfault87/tonic", branch = "create-enum-from-str-name" }
